--- a/card.html
+++ b/card.html
@@ -108,13 +108,11 @@
         color: var(--text-primary);
       }
       .profile-picture {
-        width: 40px;
-        height: 40px;
+        width: 44px;
+        height: 44px;
         border-radius: 50%;
         object-fit: cover;
         cursor: pointer;
-        background-color: var(--placeholder-profile-bg);
-        border: 1px solid #000;
         display: block;
       }
       #profile-pic-input {
@@ -545,7 +543,7 @@
       let isCardLocked = false; // Card lock state
       const localStorageProfilePicKey = "cashAppProfilePic";
       const localStorageCardLockedKey = "cashAppCardLocked"; // Local storage for lock state
-      const placeholderProfilePicSrc = `data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%23ffffff'/><circle cx='50' cy='40' r='15' fill='none' stroke='%23000' stroke-width='4'/><path d='M 25 88 C 25 78, 35 70, 50 70 S 75 78, 75 88 ' fill='none' stroke='%23000' stroke-width='4' stroke-linecap='round'/></svg>`;
+      const placeholderProfilePicSrc = `assets/svgviewer-black.svg`;
       // --- Functions ---
 
       // Update Lock Card UI based on state
