--- a/home.html
+++ b/home.html
@@ -97,13 +97,11 @@
         font-weight: 600;
       }
       .profile-picture {
-        width: 40px;
-        height: 40px;
+        width: 44px;
+        height: 44px;
         border-radius: 50%;
         object-fit: cover;
         cursor: pointer;
-        background-color: #ccc; /* Default BG */
-        border: 1px solid; /* Subtle border */
         display: block;
       }
       #profile-pic-input {
@@ -838,22 +836,22 @@
         <a href="home.html">
           <button class="nav-button" id="active" aria-label="Home">
             <svg
-            id="icon-upload"
-            width="26"
-            height="22"
-            viewBox="0 0 26 23"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              transform="translate(-51.5 -16.5)"
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M65.3158 17.5505C64.5096 17.0513 63.4903 17.0513 62.6841 17.5505L52.7104 23.7246C52.006 24.1607 51.7885 25.0852 52.2246 25.7895C52.6606 26.4939 53.5851 26.7115 54.2895 26.2754L64 20.2642L73.7104 26.2754C74.4148 26.7115 75.3393 26.4939 75.7754 25.7895C76.2114 25.0852 75.9939 24.1607 75.2895 23.7246L65.3158 17.5505ZM58 27C57.1715 27 56.5 27.6716 56.5 28.5V36.5C56.5 37.3284 57.1715 38 58 38C58.8284 38 59.5 37.3284 59.5 36.5V28.5C59.5 27.6716 58.8284 27 58 27ZM64 27C63.1715 27 62.5 27.6716 62.5 28.5V36.5C62.5 37.3284 63.1715 38 64 38C64.8284 38 65.5 37.3284 65.5 36.5V28.5C65.5 27.6716 64.8284 27 64 27ZM68.5 28.5C68.5 27.6716 69.1715 27 70 27C70.8284 27 71.5 27.6716 71.5 28.5V36.5C71.5 37.3284 70.8284 38 70 38C69.1715 38 68.5 37.3284 68.5 36.5V28.5Z"
-              fill="#8c8c8c"
-              fill-opacity="0.7"
-            />
-          </svg>
+              id="icon-upload"
+              width="26"
+              height="22"
+              viewBox="0 0 26 23"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                transform="translate(-51.5 -16.5)"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M65.3158 17.5505C64.5096 17.0513 63.4903 17.0513 62.6841 17.5505L52.7104 23.7246C52.006 24.1607 51.7885 25.0852 52.2246 25.7895C52.6606 26.4939 53.5851 26.7115 54.2895 26.2754L64 20.2642L73.7104 26.2754C74.4148 26.7115 75.3393 26.4939 75.7754 25.7895C76.2114 25.0852 75.9939 24.1607 75.2895 23.7246L65.3158 17.5505ZM58 27C57.1715 27 56.5 27.6716 56.5 28.5V36.5C56.5 37.3284 57.1715 38 58 38C58.8284 38 59.5 37.3284 59.5 36.5V28.5C59.5 27.6716 58.8284 27 58 27ZM64 27C63.1715 27 62.5 27.6716 62.5 28.5V36.5C62.5 37.3284 63.1715 38 64 38C64.8284 38 65.5 37.3284 65.5 36.5V28.5C65.5 27.6716 64.8284 27 64 27ZM68.5 28.5C68.5 27.6716 69.1715 27 70 27C70.8284 27 71.5 27.6716 71.5 28.5V36.5C71.5 37.3284 70.8284 38 70 38C69.1715 38 68.5 37.3284 68.5 36.5V28.5Z"
+                fill="#8c8c8c"
+                fill-opacity="0.7"
+              />
+            </svg>
           </button>
         </a>
 
@@ -971,7 +969,7 @@
       const localStorageSavingsKey = "cashAppSavings";
       const localStorageSavingsGoalKey = "cashAppSavingsGoal";
       let isEditingSavings = false;
-      const placeholderProfilePicSrc = `data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%23ffffff'/><circle cx='50' cy='40' r='15' fill='none' stroke='%23000' stroke-width='4'/><path d='M 25 88 C 25 78, 35 70, 50 70 S 75 78, 75 88 ' fill='none' stroke='%23000' stroke-width='4' stroke-linecap='round'/></svg>`;
+      const placeholderProfilePicSrc = `assets/svgviewer-black.svg`;
 
       // --- Functions ---
 
