--- a/home.html
+++ b/home.html
@@ -829,13 +829,7 @@
             </div>
           </article>
         </section>
-        <!-- 
------------------------------------------------------
- 1. HTML Structure for the Overlay
-    (Paste this just before the closing </body> tag in your pages)
-    (NO CHANGES FROM PREVIOUS VERSION NEEDED HERE)
------------------------------------------------------
--->
+        <!-- HTML Structure for the Overlay-->
         <div id="feedback-overlay" class="feedback-modal-overlay">
           <div class="feedback-modal-content">
             <button
@@ -1366,7 +1360,7 @@
       // --- Initial Load ---
       document.addEventListener("DOMContentLoaded", loadState);
     </script>
-    <script src="nav.js"></script>
+
     <script src="feedback.js"></script>
   </body>
 </html>
