--- a/card.html
+++ b/card.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="feedback.css" />
     <style>
       /* --- Global Styles & Variables --- */
       :root {
@@ -515,6 +516,81 @@
           </button>
         </a>
       </nav>
+      <!-- HTML Structure for the Overlay-->
+      <div id="feedback-overlay" class="feedback-modal-overlay">
+        <div class="feedback-modal-content">
+          <button
+            class="feedback-modal-close-btn"
+            id="feedback-modal-close-btn"
+            aria-label="Close Feedback"
+          >
+            ×
+          </button>
+          <h2>Rate your experience</h2>
+          <p class="feedback-subtitle">
+            How likely are you to recommend this app?
+          </p>
+
+          <div class="feedback-star-rating" id="feedback-star-rating">
+            <span class="star" data-value="1"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="2"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="3"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="4"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="5"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+          </div>
+
+          <div class="feedback-comment-section">
+            <label for="feedback-comment"
+              >Additional comments (optional):</label
+            >
+            <textarea
+              id="feedback-comment"
+              rows="4"
+              placeholder="Tell us more..."
+            ></textarea>
+          </div>
+
+          <div class="feedback-modal-actions">
+            <button
+              id="feedback-cancel-btn"
+              class="feedback-modal-btn secondary"
+            >
+              Cancel
+            </button>
+            <button
+              id="feedback-submit-btn"
+              class="feedback-modal-btn primary"
+              disabled
+            >
+              Submit Feedback
+            </button>
+          </div>
+        </div>
+        <!-- Thank You Message (Initially Hidden) -->
+        <div class="feedback-thank-you" id="feedback-thank-you">
+          <div class="feedback-thank-you-content">
+            <i class="fas fa-check-circle"></i>
+            <h3>Thank You!</h3>
+            <p>Your feedback has been submitted.</p>
+            <button
+              id="feedback-thank-you-close-btn"
+              class="feedback-modal-btn primary"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End app-container -->
 
@@ -691,6 +767,6 @@
       // --- Initial Load ---
       document.addEventListener("DOMContentLoaded", loadInitialState);
     </script>
-    <script src="nav.js"></script>
+    <script src="feedback.js"></script>
   </body>
 </html>
