--- a/history.html
+++ b/history.html
@@ -8,6 +8,7 @@
     />
     <title>Activity - Cash App</title>
     <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="feedback.css" />
     <style>
       :root {
         /* --- Color Palette (Matched closely to reference) --- */
@@ -953,7 +954,81 @@
           </a>
         </nav>
       </div>
+      <!-- HTML Structure for the Overlay-->
+      <div id="feedback-overlay" class="feedback-modal-overlay">
+        <div class="feedback-modal-content">
+          <button
+            class="feedback-modal-close-btn"
+            id="feedback-modal-close-btn"
+            aria-label="Close Feedback"
+          >
+            ×
+          </button>
+          <h2>Rate your experience</h2>
+          <p class="feedback-subtitle">
+            How likely are you to recommend this app?
+          </p>
 
+          <div class="feedback-star-rating" id="feedback-star-rating">
+            <span class="star" data-value="1"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="2"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="3"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="4"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="5"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+          </div>
+
+          <div class="feedback-comment-section">
+            <label for="feedback-comment"
+              >Additional comments (optional):</label
+            >
+            <textarea
+              id="feedback-comment"
+              rows="4"
+              placeholder="Tell us more..."
+            ></textarea>
+          </div>
+
+          <div class="feedback-modal-actions">
+            <button
+              id="feedback-cancel-btn"
+              class="feedback-modal-btn secondary"
+            >
+              Cancel
+            </button>
+            <button
+              id="feedback-submit-btn"
+              class="feedback-modal-btn primary"
+              disabled
+            >
+              Submit Feedback
+            </button>
+          </div>
+        </div>
+        <!-- Thank You Message (Initially Hidden) -->
+        <div class="feedback-thank-you" id="feedback-thank-you">
+          <div class="feedback-thank-you-content">
+            <i class="fas fa-check-circle"></i>
+            <h3>Thank You!</h3>
+            <p>Your feedback has been submitted.</p>
+            <button
+              id="feedback-thank-you-close-btn"
+              class="feedback-modal-btn primary"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
       <!-- Transaction Detail/Edit Overlay -->
       <div class="overlay transaction-detail-overlay" id="transaction-overlay">
         <div class="overlay-header">
@@ -1701,5 +1776,6 @@
         loadTransactions();
       });
     </script>
+    <script src="feedback.js"></script>
   </body>
 </html>
