--- a/pay.html
+++ b/pay.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link rel="stylesheet" href="feedback.css" />
     <style>
       /* --- Global Styles & Variables --- */
       :root {
@@ -160,14 +160,15 @@
         padding: clamp(20px, 10vh, 80px) var(--padding-screen) 15px; /* **KEY**: Responsive top padding to push down */
       }
       .displayed-amount {
-        display: flexs;
+        display: flex;
         font-size: clamp(48px, 18vmin, 84px);
         font-weight: 500;
         line-height: 1.1;
-        margin-bottom: 5px; /* Space before currency button */
+        margin-bottom: 10px; /* Space before currency button */
         min-height: 1.2em; /* Min height based on line height */
         color: var(--text-primary);
         word-break: break-all;
+        margin-top: -25px;
       }
       .currency-selector {
         background-color: var(--button-bg-darker);
@@ -179,6 +180,7 @@
         font-weight: 500;
         cursor: pointer;
         transition: background-color 0.2s ease;
+        margin-top: -4px;
         margin-bottom: 5px; /* Small space below */
       }
       .currency-selector:hover {
@@ -546,6 +548,81 @@
         </div>
         <p class="qr-scanner-text">Scanning...</p>
       </div>
+      <!-- HTML Structure for the Overlay-->
+      <div id="feedback-overlay" class="feedback-modal-overlay">
+        <div class="feedback-modal-content">
+          <button
+            class="feedback-modal-close-btn"
+            id="feedback-modal-close-btn"
+            aria-label="Close Feedback"
+          >
+            ×
+          </button>
+          <h2>Rate your experience</h2>
+          <p class="feedback-subtitle">
+            How likely are you to recommend this app?
+          </p>
+
+          <div class="feedback-star-rating" id="feedback-star-rating">
+            <span class="star" data-value="1"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="2"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="3"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="4"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+            <span class="star" data-value="5"
+              ><i class="far fa-star"></i><i class="fas fa-star solid"></i
+            ></span>
+          </div>
+
+          <div class="feedback-comment-section">
+            <label for="feedback-comment"
+              >Additional comments (optional):</label
+            >
+            <textarea
+              id="feedback-comment"
+              rows="4"
+              placeholder="Tell us more..."
+            ></textarea>
+          </div>
+
+          <div class="feedback-modal-actions">
+            <button
+              id="feedback-cancel-btn"
+              class="feedback-modal-btn secondary"
+            >
+              Cancel
+            </button>
+            <button
+              id="feedback-submit-btn"
+              class="feedback-modal-btn primary"
+              disabled
+            >
+              Submit Feedback
+            </button>
+          </div>
+        </div>
+        <!-- Thank You Message (Initially Hidden) -->
+        <div class="feedback-thank-you" id="feedback-thank-you">
+          <div class="feedback-thank-you-content">
+            <i class="fas fa-check-circle"></i>
+            <h3>Thank You!</h3>
+            <p>Your feedback has been submitted.</p>
+            <button
+              id="feedback-thank-you-close-btn"
+              class="feedback-modal-btn primary"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End app-container -->
 
@@ -847,6 +924,7 @@
         formatAndDisplayAmount(); // Initialize display to $0
       });
     </script>
-    <script src="nav.js"></script>
+    <script src="feedback.js"></script>
+    
   </body>
 </html>
