--- a/card.html
+++ b/card.html
@@ -81,13 +81,12 @@
       .app-container {
         max-width: 450px;
         width: 100%;
-        height: 100vh;
-        max-height: 900px;
-        background-color: var(--header-bg-color); /* Overall background white */
+        height: 100%;
+        margin: 0 auto;
+        background-color: var(--app-bg-color);
         display: flex;
         flex-direction: column;
         position: relative;
-        overflow: hidden;
       }
 
       /* --- Card Header --- */
