--- a/search.html
+++ b/search.html
@@ -68,13 +68,12 @@
       .app-container {
         max-width: 450px;
         width: 100%;
-        height: 100vh;
-        max-height: 900px;
+        height: 100%;
+        margin: 0 auto;
         background-color: var(--app-bg-color);
         display: flex;
         flex-direction: column;
         position: relative;
-        overflow: hidden;
       }
 
       /* --- Search Header --- */
@@ -1183,6 +1182,5 @@
       document.addEventListener("DOMContentLoaded", loadInitialState);
     </script>
     <script src="feedback.js"></script>
-    
   </body>
 </html>
