--- a/search.html
+++ b/search.html
@@ -477,26 +477,27 @@
             </svg>
           </button>
         </a>
-
-        <button class="nav-button" aria-label="Cards">
-          <svg
-            id="icon-wallet"
-            width="24"
-            height="20"
-            viewBox="0 0 24 21"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              transform="translate(-126.25 -18)"
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M131.25 21H145.25C146.355 21 147.25 21.8954 147.25 23V33C147.25 34.1046 146.355 35 145.25 35H131.25C130.145 35 129.25 34.1046 129.25 33V23C129.25 21.8954 130.145 21 131.25 21ZM126.25 23C126.25 20.2386 128.489 18 131.25 18H145.25C148.011 18 150.25 20.2386 150.25 23V33C150.25 35.7614 148.011 38 145.25 38H131.25C128.489 38 126.25 35.7614 126.25 33V23ZM134.25 24C133.145 24 132.25 24.8954 132.25 26C132.25 27.1046 133.145 28 134.25 28H135.25C136.355 28 137.25 27.1046 137.25 26C137.25 24.8954 136.355 24 135.25 24H134.25Z"
-              fill="#8c8c8c"
-              fill-opacity="0.7"
-            />
-          </svg>
-        </button>
+        <a href="card.html">
+          <button class="nav-button" aria-label="Cards">
+            <svg
+              id="icon-wallet"
+              width="24"
+              height="20"
+              viewBox="0 0 24 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                transform="translate(-126.25 -18)"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M131.25 21H145.25C146.355 21 147.25 21.8954 147.25 23V33C147.25 34.1046 146.355 35 145.25 35H131.25C130.145 35 129.25 34.1046 129.25 33V23C129.25 21.8954 130.145 21 131.25 21ZM126.25 23C126.25 20.2386 128.489 18 131.25 18H145.25C148.011 18 150.25 20.2386 150.25 23V33C150.25 35.7614 148.011 38 145.25 38H131.25C128.489 38 126.25 35.7614 126.25 33V23ZM134.25 24C133.145 24 132.25 24.8954 132.25 26C132.25 27.1046 133.145 28 134.25 28H135.25C136.355 28 137.25 27.1046 137.25 26C137.25 24.8954 136.355 24 135.25 24H134.25Z"
+                fill="#8c8c8c"
+                fill-opacity="0.7"
+              />
+            </svg>
+          </button>
+        </a>
         <a href="pay.html">
           <button class="nav-button" aria-label="Pay">
             <svg
