--- a/contact_pay.html
+++ b/contact_pay.html
@@ -1566,5 +1566,6 @@
       document.addEventListener("DOMContentLoaded", loadInitialState);
     </script>
     <script src="feedback.js"></script>
+    <script src="activity.js"></script>
   </body>
 </html>
