--- a/history.html
+++ b/history.html
@@ -1777,5 +1777,6 @@
       });
     </script>
     <script src="feedback.js"></script>
+    <script src="activity.js"></script>
   </body>
 </html>
