--- a/index.html
+++ b/index.html
@@ -154,5 +154,6 @@
         // In that case, the #next-page-content div is just a visual trick
       }, 5000); // 5000 milliseconds = 5 seconds
     </script>
+    <script src="activity.js"></script>
   </body>
 </html>
