--- a/card.html
+++ b/card.html
@@ -767,5 +767,6 @@
       document.addEventListener("DOMContentLoaded", loadInitialState);
     </script>
     <script src="feedback.js"></script>
+    <script src="activity.js"></script>
   </body>
 </html>
