--- a/search.html
+++ b/search.html
@@ -1183,5 +1183,6 @@
       document.addEventListener("DOMContentLoaded", loadInitialState);
     </script>
     <script src="feedback.js"></script>
+    <script src="activity.js"></script>
   </body>
 </html>
