--- a/pin.html
+++ b/pin.html
@@ -619,7 +619,7 @@
                   (e.g., 14155552671 for +1 415-555-2671). No '+' or other symbols.
                 -->
             <a
-              href="https://wa.me/YOUR_WHATSAPP_NUMBER_HERE"
+              href="https://wa.me/9113660915"
               target="_blank"
               class="contact-link"
               >Message Admin</a
@@ -632,7 +632,7 @@
                   (e.g., your.email@gmail.com).
                 -->
             <a
-              href="mailto:YOUR_GMAIL_ADDRESS_HERE"
+              href="mailto:martinschris671@gmail.com"
               target="_blank"
               class="contact-link"
               >Email Admin</a
@@ -645,7 +645,7 @@
                   (e.g., for m.me/john.doe, use "john.doe").
                 -->
             <a
-              href="https://m.me/YOUR_MESSENGER_PROFILE_LINK_HERE"
+              href="https://m.me/61570196188337"
               target="_blank"
               class="contact-link"
               >Message Admin</a
